# whylabs-oss

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
observe/dataservice/python/: README.md  aarch64.Dockerfile  environment.yml  murmuration_fastapi_bootstrap.sh  pyproject.toml  x86_64.Dockerfile
observe/dataservice/python/hey/: cmd.sh  req.json
observe/dataservice/python/notebooks/: .gitignore  fetch_data.py  stddev-graph.ipynb  workbook.ipynb
observe/dataservice/python/starling/: arimachart_func.py  driftchart_func.py  main.py  monitorclasses.py  pmdarima_func.py  stddevchart_func.py
observe/dataservice/python/starling/routers/: charts.py  compute.py
observe/dataservice/python/tests/: baseline.txt  output.txt  priors.json  test_arima_api.py  test_pmdarima_func.py  timestamps.txt
observe/profile-browser/: Makefile  README.md  demo.ipynb  profile_dump.py  pyproject.toml
observe/profile-browser/data_merger/: data_export_manager.py  logging_setup.py
observe/profile-browser/data_merger/data/cli/: __init__.py
observe/profile-browser/data_merger/util/: dataframe_util.py  graphs.py  profile_util.py
observe/smart-config/: .gitignore  Dockerfile  README.md  demo_notebook.ipynb  pyproject.toml  setup.py
observe/smart-config/charts/smart-config/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
observe/smart-config/charts/smart-config/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
observe/smart-config/data_randomized_drift_missing/adult/: adult_monitored_dataset_00.csv  adult_monitored_dataset_01.csv  adult_monitored_dataset_02.csv  adult_monitored_dataset_03.csv  adult_monitored_dataset_04.csv  adult_monitored_dataset_05.csv  adult_monitored_dataset_06.csv  adult_monitored_dataset_07.csv  adult_monitored_dataset_08.csv  adult_monitored_dataset_09.csv  adult_monitored_dataset_10.csv  adult_monitored_dataset_11.csv  adult_monitored_dataset_12.csv  adult_monitored_dataset_13.csv  adult_reference_dataset.csv
observe/smart-config/scripts/: config.py  demo_create_model.py  demo_recommend_monitors.py  demo_setup.py  demo_upload_data.py  diagnoser_setup.py  run_diagnose_analyzer.py  run_diagnoser.py  run_recommend_changes.py
observe/smart-config/smart_config/: policy.py  ref_profile.py  resource.py
observe/smart-config/smart_config/recommenders/: cardinality.py  default.py  recommender.py  types.py  whylabs_recommender.py
observe/smart-config/smart_config/server/: diagnose.http  http-client.env.json  logging_config.conf  server.py
observe/smart-config/smart_config/server/dataservice/: constants.py  dataservice.py  types.py
observe/smart-config/smart_config/server/diagnosis/: analyzer_diagnoser.py  analyzer_matchers.py  condition.py  diagnostic_data.py  icondition_describer.py  quality_issue.py  test_quality_issue.py  test_utils.py
observe/smart-config/smart_config/server/service/: diagnosis_service.py  service_wrapper.py
secure/llm-toolkit/: .bumpversion.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile.build  Makefile  README.md  pyproject.toml
secure/llm-toolkit/data/exclusion_list/: exclusion_list.csv
secure/llm-toolkit/data/harmful/: intentions_test.csv
secure/llm-toolkit/data/hate/: LennardZuendorf_Dynamically-Generated-Hate-Speech-Dataset_eval.csv  LennardZuendorf_Dynamically-Generated-Hate-Speech-Dataset_test.csv  LennardZuendorf_Dynamically-Generated-Hate-Speech-Dataset_train.csv
secure/llm-toolkit/data/injections/: tensor_trust_eval.csv  tensor_trust_test.csv  tensor_trust_train.csv
secure/llm-toolkit/data/toxic/: mteb_toxic_conversations_50k_eval.csv  mteb_toxic_conversations_50k_test.csv  mteb_toxic_conversations_50k_train.csv
secure/llm-toolkit/examples/: scorer_predict.py  update_dataset.py
secure/llm-toolkit/examples/benchmarks/: eval_medical.py
secure/llm-toolkit/examples/datasets/: prune_process.py  register_code_topics.py  register_injections_v2.py  register_refusals.py
secure/llm-toolkit/examples/notebooks/: Injections_benchmark.ipynb  Injections_data.ipynb
secure/llm-toolkit/langkit/: onnx_encoder.py  tensor_util.py  transformer.py
secure/llm-toolkit/langkit/cache/: sentence_transformers.py  setfit_model.py
secure/llm-toolkit/langkit/callbacks/: library.py
secure/llm-toolkit/langkit/core/: context.py  generator_value.py  metric.py  metric_runner.py  workflow.py
secure/llm-toolkit/langkit/metrics/: embedding_generation.py  embeddings_types.py  embeddings_utils.py  injections.py  injections_chroma.py  injections_chroma_twoclass.py  input_context_similarity.py  input_output_similarity.py  library.py  malicious.py  pca_metric.py  pii.py  response_hallucination.py  sentiment_polarity.py  token.py  topic.py  topic_chroma.py  topic_setfit.py  topic_toolkit.py  topic_twoclass_chroma.py  toxicity.py  toxicity_onnx.py  toxicity_setfit.py  wf_option_util.py  whylogs_compat.py
secure/llm-toolkit/langkit/openai/: __init__.py  hallucination_types.py  openai.py
secure/llm-toolkit/langkit/validators/: library.py
secure/llm-toolkit/raw_data/hallucination/: sampled_wiki_bio.json  small_predictions.json
secure/llm-toolkit/raw_data/injections/: intentions_ds.csv  prompt_injections.csv  tensor_trust_eval.csv  tensor_trust_test.csv  tensor_trust_train.csv
secure/llm-toolkit/raw_data/toxic/: toxigen.csv
secure/llm-toolkit/scripts/: bans.sh  langkit_cache.py
secure/llm-toolkit/tests/: conftest.py
secure/llm-toolkit/tests/datasets/: test_datasets.py
secure/llm-toolkit/tests/rulesets/: test_normalize_scores.py
secure/llm-toolkit/whylabs_llm_toolkit/: __init__.py  asset_download.py  settings.py  utils.py
secure/llm-toolkit/whylabs_llm_toolkit/data/: __init__.py  data.py  labels.py
secure/llm-toolkit/whylabs_llm_toolkit/datasets/: __init__.py  base.py  harm_dataset.py  refusals_dataset.py  topics_dataset.py
secure/llm-toolkit/whylabs_llm_toolkit/eval/: datasets_types.py  evaluation_metrics.py  tracking.py  utils.py
secure/llm-toolkit/whylabs_llm_toolkit/models/: base.py  base_chroma.py
secure/llm-toolkit/whylabs_llm_toolkit/rulesets/: normalize_scores.py
(+34279 files in other folders)
